# mPic

./: .gitmodules  CMakeLists.txt  Config.cpp  Config.h  LICENSE  README.md  main.cpp
cmake/: arch.cmake  simdjson.cmake  target.cmake
